fix(nudge,typeit): handle missing AWT in native image and enable FFM native access